--- a/app/assets/templates/v2/dashboard_main.jst.ejs.erb
+++ b/app/assets/templates/v2/dashboard_main.jst.ejs.erb
@@ -33,12 +33,11 @@
       <div class='communication-widget'>
         <h2 class='sub-header'>MEASURES DEBUGGER</h2>
 
-        <h3> Current selections: Snapshot {{selectedSnapshot.id}}, Group {{selectedGroup.name}}, Measure: {{selectedMeasure.name}} </h3>
+        <h3> <u>Snapshot:</u> {{selectedSnapshot.id}}, <u>Group:</u> {{selectedGroup.name}}, <u>Measure:</u> {{selectedMeasure.name}} </h3>
         Snapshots: <select ng-model="selectedSnapshot" ng-options="x.name for x in snapshots"></select><br><br>
         Groups: <select ng-model="selectedGroup" ng-options="x.name for x in groups"></select>
         Measures: <select ng-model="selectedMeasure" ng-options="x.name for x in measures"></select> </br><br>
         <button ng-click='runPrecalculate(selectedGroup,selectedMeasure)'>Run Precalculate</button> </br>
-        Measure: {{selectedMeasure.name}}
         <br>
         <br>
         <table>
