Upgrade ruby to 2.4.1. Upgrade rails to 5.1.0 - edited Gemfile. Removed some css line that were causing problems. Added application_record.rb as suggested when upgrading from rails 4.2 in official rails website

--- a/app/assets/stylesheets/v2/edit_preset.scss
+++ b/app/assets/stylesheets/v2/edit_preset.scss
@@ -54,10 +54,16 @@
         height: 28px;
         background-repeat: no-repeat;
         display: inline-block;
+        /*
+        6.7.17 - Michael - Commented out after upgrade to rails 5. Need to delete or fix
         background-image: url(asset-path('save draft_active.png'));
+        */
       }
       .off {
+      /*
+      6.7.17 - Michael - Commented out after upgrade to rails 5. Need to delete or fix
         background-image: url(asset-path('save draft_disabled.png'));
+        */
       }
       .generate-preset {
         padding-right: 10px;
