Questionnaire page: disabled submit button while running questionnaire snapshot. Resend all - fixed bug - in send_questionnaire_ajax() - removed param 'q_id' from function call q.delay.resend_questionnaire()

--- a/app/assets/stylesheets/v2/setting_main.scss
+++ b/app/assets/stylesheets/v2/setting_main.scss
@@ -8,6 +8,10 @@
   &.narrow {
     width: calc(100% - 394px);
   }
+  .disabled{
+    opacity: 0.5;
+    pointer-events: none;
+  }
   .title {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -270,6 +274,7 @@
       font-weight: 700;
       cursor: pointer;
       border: 1px solid #4a55e5;
+      background-color: white;
       &:hover {
         /*background-color: rgb(237, 238, 252);*/
       }
