--- a/app/assets/stylesheets/v2/setting_main.scss
+++ b/app/assets/stylesheets/v2/setting_main.scss
@@ -383,7 +383,11 @@
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  text-align: left;
+  text-align: center;
+  .disabled{
+    opacity: 0.5;
+    pointer-events: none;
+  }
   .employees_table_header {
     border-bottom: 2px solid #d6dee8;
     font-size: 12px;
@@ -432,6 +436,9 @@
         display: inline-block;
         margin-left: 15px;
       }
+      .centered{
+        text-align: center;
+      }
     }
     .employee-name {
       font-size: 16px;
@@ -440,18 +447,24 @@
     .employee-answered-number {
       width: 12%;
     }
-    .resend-emp {
+    .emp-action{
       height: 25px;
       line-height: 25px;
       width: 120px;
       text-align: left;
-      color: #4a55e5;
       /*border: 1px solid #4a55e5;*/
-      font-weight: 700;
       &:hover {
         text-decoration: underline;
         /*background-color: rgb(237, 238, 252);*/
       }
+    }
+    .resend {
+      color: #4a55e5;
+      font-weight: 700;
+    }
+    .reset {
+      color: red;
+      font-weight: 900;
     }
   }
 }
