Interact reports: Added button to questionnaire management page - to generate and download report. Report contains 3 separate reports as sheets inside an excel file. Show the status of the quesstionnaire and some more info about employees etc. Reports are generated to a folder: public/questionnaire_reports - added to gitignore. routest.rb - removed unused action send_questionnaire

--- a/app/assets/stylesheets/v2/setting_main.scss
+++ b/app/assets/stylesheets/v2/setting_main.scss
@@ -129,6 +129,16 @@
           background-color: rgb(237, 238, 252);
         }
       }
+      .reports {
+        height: 25px;
+        line-height: 25px;
+        width: 120px;
+        text-align: center;
+        color: white;
+        border: 1px solid #4a55e5;
+        font-weight: 700;
+        background-color: #4a55e5;
+      }
     }
   }
   .pagination-class {
