--- a/app/views/application/v2_app.html.erb
+++ b/app/views/application/v2_app.html.erb
@@ -1,4 +1,4 @@
-<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<!-- link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css' -->
 
 <div class='workships-canvas' ng-cloak="">
   <div ng-controller='layoutController' ng-init='init()' class='layout_wrapper'>
