--- a/app/views/example_mailer/sample_email.html.erb
+++ b/app/views/example_mailer/sample_email.html.erb
@@ -6,8 +6,7 @@
   <body dir="lta">
     <h1>ძვირფასო <%= @msg.questionnaire_participant.employee.first_name %>!</h1>
     <p>
-ვიწყებთ ჩვენს შორის „ნეთვორქერების“ – ფართო პროფესიული ან მეგობრული კავშირების მქონე კოლეგების ძიებას!  
-ამ ინიციატივის მიზანია, აქტიური და კომუნიკაბელური თანამშრომლები ნებაყოფლობით ჩავრთოთ ბანკის შიგნით სტრატეგიული საკითხების განხილვაში (იდეების გენერაცია სხვადასხვა პროექტებისთვის, კვლევები); ასევე მოვიწვიოთ შიდა ურთიერთობების კამპანიებში მონაწილეობისთვის. მათი დახმარებით, საერთო ინტერესების მქონე ჯგუფებსა და ფორუმებს შევქმნით და  კოლეგებს ერთმანეთთან უკეთ დავაკავშირებთ. 
+ვიწყებთ ჩვენს შორის „ნეთვორქერების“ – ფართო პროფესიული ან მეგობრული კავშირების მქონე კოლეგების ძიებას! ამ ინიციატივის მიზანია, აქტიური და კომუნიკაბელური თანამშრომლები ნებაყოფლობით ჩავრთოთ ბანკის შიგნით სტრატეგიულ პროექტებში (იდეების გენერაცია სხვადასხვა პროექტებისთვის, კვლევები); ასევე მოვიწვიოთ შიდა ურთიერთობების კამპანიებში მონაწილეობისთვის. მათი დახმარებით, საერთო ინტერესების მქონე ჯგუფებსა და ფორუმებს შევქმნით და კოლეგებს ერთმანეთთან უკეთ დავაკავშირებთ.
     </p><br><br>
     <p>
     საამისოდ გთხოვთ, უპასუხოთ ორ მარტივ შეკითხავს: <br><br>
@@ -25,7 +24,7 @@
     </p>
     <p style='color: #75797f'>
     <br><br>
-    <u>კითხვარის  შევსების  მოკლე ინსტრუქცია: </u><br><br>
+    <u>კითხვარის შევსების მოკლე ინსტრუქცია: </u><br><br>
 
     გაითვალისწინეთ, რომ კომპიუტერი, რომლიდანაც კვლევაში ერთვებით, აუცილებლად ქსელში უნდა იყოს მიერთებული. <br><br>
 
@@ -34,13 +33,12 @@
     •	სულ, შეკითხვაზე პასუხის გასაცემად, შეგიძლიათ მონიშნოთ 1-დან 12-მდე კოლეგა. <br>
     •	მეორე შეკითხვაზე პასუხის გაცემისას იხელმძღვანელეთ იგივე ინსტრუქციით. <br><br>
 
-    კითხვარს გააჩნია მობილური ვერსიაც. <br>
-მობილური ვერსიით კითხვარის შევსებისას გაითვალისწინეთ, რომ იგივე კითხვარი არ უნდა იყოს გახსნილი თქვენს პერსონალურ კომპიუტერში.  
-კოლეგების სია იგივე პრინციპით მობილურ ვერსიაშიც შეგიძლიათ დაათვალიეროთ; ასევე დაამატოთ სხვა, თქვენთვის სასურველი კოლეგები. <br><br>
+    კითხვარს გააჩნია მობილური ვერსიაც.  <br>
+    მობილური ვერსიით კითხვარის შევსებისას გაითვალისწინეთ, რომ იგივე კითხვარი არ უნდა იყოს გახსნილი თქვენს პერსონალურ კომპიუტერში. კოლეგების სია იგივე პრინციპით მობილურ ვერსიაშიც შეგიძლიათ დაათვალიეროთ; ასევე დაამატოთ სხვა, თქვენთვის სასურველი კოლეგები.<br><br>
 
-შეკითხვების შემთხვევაში გთხოვთ, მიმართეთ მხარდაჭერის ჯგუფს:  4344<br><br>
+    შეკითხვების შემთხვევაში გთხოვთ, მიმართეთ მხარდაჭერის ჯგუფს: 4344<br><br>
 
-დიდ მადლობას გიხდით აქტიურობისა და თანამშრომლობისათვის.
+    დიდ მადლობას გიხდით აქტიურობისა და თანამშრომლობისათვის.
     </p>
   </body>
 </html>
