--- a/app/assets/stylesheets/mobile/common.scss
+++ b/app/assets/stylesheets/mobile/common.scss
@@ -2,11 +2,8 @@
 @import 'compass/typography/text/ellipsis';
 @import 'compass/css3/user-interface';
 @import 'compass/css3/border-radius';
-@import './colors.css.scss';
-@import './sizes.css.scss';
-
-
-
+@import './colors.scss';
+@import './sizes.scss';
 
 html,
 body
