--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -1,5 +1,5 @@
-@import './colors.css.scss';
-@import './common.css.scss';
+@import './colors.scss';
+@import './common.scss';
 
 
 .mobile-wrapper {
