--- a/app/views/layouts/mobile_application.erb
+++ b/app/views/layouts/mobile_application.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MobileWorkships</title>
     <%= stylesheet_link_tag    'mobile', media: 'all'%>
     <%= javascript_include_tag 'mobile'%>
