simulate replies and send test questionnaires to more than one destination

--- a/app/views/example_mailer/sample_email.html.erb
+++ b/app/views/example_mailer/sample_email.html.erb
@@ -4,45 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body dir="lta">
-    <h1>ძვირფასო <%= @msg.questionnaire_participant.employee.first_name %>!</h1>
-    <p>
-ვიწყებთ ჩვენს შორის „ნეთვორქერების“ – ფართო პროფესიული ან მეგობრული კავშირების მქონე კოლეგების ძიებას! ამ ინიციატივის მიზანია, აქტიური და კომუნიკაბელური თანამშრომლები ნებაყოფლობით ჩავრთოთ ბანკის შიგნით სტრატეგიულ პროექტებში (იდეების გენერაცია სხვადასხვა პროექტებისთვის, კვლევები); ასევე მოვიწვიოთ შიდა ურთიერთობების კამპანიებში მონაწილეობისთვის. მათი დახმარებით, საერთო ინტერესების მქონე ჯგუფებსა და ფორუმებს შევქმნით და კოლეგებს ერთმანეთთან უკეთ დავაკავშირებთ.
-    </p><br><br>
-    <p>
-    საამისოდ გთხოვთ, უპასუხოთ ორ მარტივ შეკითხავს: <br><br>
-
-    1)	ვინ არის თქვენი მეგობარი ბანკის მასშტაბით; <br>
-    2)	ვის მიიჩნევთ ბანკში თქვენს მრჩეველად, ვისაც სამსახურთან დაკავშირებული, პროფესიული რეკომენდაციისთვის მიმართავთ<br><br>
-
-    თითოეულ კითხვაზე პასუხის გაცემისას შეგიძლიათ აირჩიოთ 1-დან 12-მდე კოლეგა <br><br>
-
-
-გთხოვთ, უპასუხოთ შეკითხვებს და დაგვეხმაროთ უკეთესი კომუნიკაციების ჩამოყალიბებასა და უკეთესი სტრატეგიული გადაწყვეტილებების მიღებაში.
-    </p>
-    <p>
-      <b>კითხვარი განთავსებულია ბმულზე: <a href="<%= @msg.message %>">Click Here</a></b><br><br>
-    </p>
-    <p style='color: #75797f'>
-    <br><br>
-    <u>კითხვარის შევსების მოკლე ინსტრუქცია: </u><br><br>
-
-    გაითვალისწინეთ, რომ კომპიუტერი, რომლიდანაც კვლევაში ერთვებით, აუცილებლად ქსელში უნდა იყოს მიერთებული. <br><br>
-
-    •	შეკითხვის შესაბამისად, მონიშნეთ თქვენთვის სასურველი კოლეგები.<br>
-    •	შეგიძლიათ დაამატოთ სხვა კოლეგები. ამისთვის, იქვე მოცემულ საძიებელში, უნიკოდით აკრეფთ თანამშრომლის სახელსა და გვარს. <br>
-    •	სულ, შეკითხვაზე პასუხის გასაცემად, შეგიძლიათ მონიშნოთ 1-დან 12-მდე კოლეგა. <br>
-    •	მეორე შეკითხვაზე პასუხის გაცემისას იხელმძღვანელეთ იგივე ინსტრუქციით. <br><br>
-
-    კითხვარს გააჩნია მობილური ვერსიაც.  <br>
-    მობილური ვერსიით კითხვარის შევსებისას გაითვალისწინეთ, რომ იგივე კითხვარი არ უნდა იყოს გახსნილი თქვენს პერსონალურ კომპიუტერში. კოლეგების სია იგივე პრინციპით მობილურ ვერსიაშიც შეგიძლიათ დაათვალიეროთ; ასევე დაამატოთ სხვა, თქვენთვის სასურველი კოლეგები.<br><br>
-
-    შეკითხვების შემთხვევაში გთხოვთ, მიმართეთ მხარდაჭერის ჯგუფს: 4344<br><br>
-
-    დიდ მადლობას გიხდით აქტიურობისა და თანამშრომლობისათვის.
-    </p>
+    <%= raw(@email_body) %>
   </body>
 </html>
-
-
-
 
