--- a/app/views/sa_setup/certs.html.erb
+++ b/app/views/sa_setup/certs.html.erb
@@ -14,7 +14,7 @@
     <br><br>
 
     <label class="sas-input-label">Key File:<br><br>
-      <input class="sas-input-text" type="file" name="keyFile">
+      <input class="sas-input-text" type="file" name="keyFile[file]">
     </label>
 
     <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>"/>
