add logs dir field to form

--- a/app/views/sa_setup/log_files_location.html.erb
+++ b/app/views/sa_setup/log_files_location.html.erb
@@ -21,6 +21,11 @@
     <label class="sas-input-label">SFTP Password:<br><br>
       <input class="sas-input-text" type="password" name="sftpPassword">
     </label>
+    <br><br>
+
+    <label class="sas-input-label">SFTP Logs Directory:<br><br>
+      <input class="sas-input-text" type="text" name="sftpLogsDir">
+    </label>
 
     <br><br><br><br>
     <button class="sas-submit-btn">Save</button>
