--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -13,8 +13,8 @@
     <div class='question-instruction-tooltip' ng-click='toggleFullQuestionView()'>
       <div class='full-question-blocker-show' ng-class="!show_full_question && 'full-question-blocker-hide'"></div>
       <div class='question-container' ng-class="show_full_question && 'question-container-display'">
-        <div ng-if="mobile_app_service.isLangRtl()" ng-bind-html='r.question' class='question' dir='rtl'></div>
-        <div ng-if="!mobile_app_service.isLangRtl()" ng-bind-html='r.question' class='question'></div>
+        <div ng-if="mobile_app_service.isLangRtl()" class='question' dir='rtl'><bdi ng-bind-html='r.question'></bdi></div>
+        <div ng-if="!mobile_app_service.isLangRtl()" class='question'><bdi ng-bind-html='r.question'></bdi></div>
         <div class='close-btn'><%= I18n.t('questionnaire.close_button') %></div>
       </div>
     </div>
