--- a/app/views/sa_setup/standby_or_push.html.erb
+++ b/app/views/sa_setup/standby_or_push.html.erb
@@ -14,7 +14,7 @@
   <br><br><br><br>
 
   <form id="sasform" action="/sa_setup/goto_system" method="get">
-    <label class="sas-input-label">Proceed to systemt:</label>
+    <label class="sas-input-label">Proceed to system:</label>
     <br><br>
     <button class="sas-submit-btn">Go To System</button>
   </form>
