Change progress bar color

--- a/app/assets/stylesheets/sa_setup/sa_setup.css
+++ b/app/assets/stylesheets/sa_setup/sa_setup.css
@@ -59,8 +59,8 @@
   height: 2rem;
   width: 20rem;
   background-color: #1f5d75;
-  color: #00a99d;
-  border: 0.1rem solid #00a99d;
+  color: #9fbb9f;
+  border: 0.1rem solid #9fbb9f;
   box-sizing: border-box;
   text-align: center;
   padding-top: 0.4rem
