--- a/app/views/sa_setup/push.html.erb
+++ b/app/views/sa_setup/push.html.erb
@@ -50,6 +50,10 @@
   <form id="sasform" action="/sa_setup/push_done" method="get">
     <button class="sas-submit-btn">Proceed To System</button>
   </form>
+
+  <form id="sasform2" action="/sa_setup/retry_push" method="get">
+    <button class="sas-submit-btn">Retry Push</button>
+  </form>
 </div>
 
 <script>
