improve status bar in push screen

--- a/app/views/sa_setup/push.html.erb
+++ b/app/views/sa_setup/push.html.erb
@@ -15,34 +15,11 @@
 
   <div class="sas-push-section-cont">
     <div class="sas-push-section-top">
-      <div class="sas-push-section-label">Files to process:</div>
-      <div id="sas-files-num" class="sas-push-section-num"></div>
+      <div class="sas-push-section-label">Progress:</div>
+      <!-- div id="sas-progress-num" class="sas-push-section-num"></div -->
     </div>
     <br>
-    <div id="sas-files-bar" class="sas-push-section-bar" class="sas-push-bar"></div>
-  </div>
-
-  <br><br>
-
-
-  <div class="sas-push-section-cont">
-    <div class="sas-push-section-top">
-      <div class="sas-push-section-label">Snapshots created:</div>
-      <div id="sas-snp-created-num" class="sas-push-section-num"></div>
-    </div>
-    <br>
-    <div id="sas-snp-created-bar" class="sas-push-section-bar" class="sas-push-bar"></div>
-  </div>
-
-  <br><br>
-
-  <div class="sas-push-section-cont">
-    <div class="sas-push-section-top">
-      <div class="sas-push-section-label">Snapshots processed:</div>
-      <div id="sas-snp-proced-num" class="sas-push-section-num"></div>
-    </div>
-    <br>
-    <div id="sas-snp-proced-bar" class="sas-push-section-bar" class="sas-push-bar"></div>
+    <div id="sas-progress-bar" class="sas-push-section-bar"></div>
   </div>
 
   <br><br><br><br>
