change sass-rails to sassc-rails

--- a/app/assets/stylesheets/mobile/colors.scss
+++ b/app/assets/stylesheets/mobile/colors.scss
@@ -1,9 +1,9 @@
-$debug: red;
-$workships-white: #ffffff;
+// $debug: #123456;
+$workships-white: #fff;
 $workships-babyblue: rgb(38, 43, 63);
 $workships-blue: rgb(4, 55, 97);
 $workships-grey: rgb(237, 241, 247);
-$workships-grey-with-opacity: rgba(237, 241, 247, 0.5);
+$workships-grey-with-opacity: rgba(237, 241, 247, .5);
 $workships-border: #c9d2de;
 $workships-azure: rgb(104, 146, 183);
 $workships-search-box: rgb(214, 222, 232);
