bug fixes after testing

--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -150,6 +150,7 @@
         }
         .question-container-display {
           top: 135px;
+          width: 93%;
         }
       }
       .page_content {
