--- a/app/views/sa_setup/microsoft_auth.html.erb
+++ b/app/views/sa_setup/microsoft_auth.html.erb
@@ -1,11 +1,10 @@
 <div class="sas-inner-cont">
   <div class="sas-guiding-text">
-    This processes emails and meetings from Office365. To be able to authenticate it system requires a <br>
-    system administrator to give his consent. The way this is acheived is by redirecting the application<br>
-    to Office365's login page. Once you login you have the option to give the system permission to access<br>
+    This system processes emails and meetings from Office365. To be able to authenticate the system requires a <br>
+    system administrator to consent. The way this is acheived is by redirecting the application<br>
+    to Office365's login page. Once you login you have the option to give the system permissions to access<br>
     Office365's APIs. You will also see the exact premissions required by Stepahead's application.<br><br>
-    Once the application is approved you will be redirected back to the application to continue with<br>
-    the setup.<br><br>
+    Once the application is approved you will be redirected back to Stepahead to continue the setup<br><br>
     To proceed please click the button below.
   </div>
 
