--- a/app/assets/stylesheets/sa_setup/sa_setup.css
+++ b/app/assets/stylesheets/sa_setup/sa_setup.css
@@ -38,6 +38,12 @@
   cursor: pointer;
 }
 
+.sas-anchor {
+  text-decoration: none;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .sas-form-error-bar {
   height: 2rem;
   width: 100%;
