--- a/app/views/sa_setup/push.html.erb
+++ b/app/views/sa_setup/push.html.erb
@@ -24,12 +24,12 @@
 
   <br><br><br><br>
 
-  <form id="sasform" action="/sa_setup/push_done" method="get">
-    <button class="sas-submit-btn">Proceed To System</button>
-  </form>
+  <a href="https://stepahead.step-ahead.com" class="sas-submit-btn sas-anchor">Proceed To System</a>
+
+  <br><br>
 
   <form id="sasform2" action="/sa_setup/retry_push" method="get">
-    <button class="sas-submit-btn">Retry Push</button>
+    <button style='width: 8.8rem;' class="sas-submit-btn">Retry Push</button>
   </form>
 </div>
 
