--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -54,8 +54,7 @@
           <div class="option"><i class="fa fa-share rtl" ng-click= "onUndo()"></i><div class="button-text-rtl"><%=I18n.t('questionnaire.revise_selection') %></div></div>
           <div class="spacer-rtl"><%=I18n.t('questionnaire.or') %></div>
           <div class="option">
-            <i class="fa fa-chevron-left rtl" ng-click='minMaxOnFinish()' ng-if='mobile_app_service.isQuestionTypeMinMax()'></i><div class="button-text-rtl"><%=I18n.t('questionnaire.continue_to_next_question') %></div>
-            <i class="fa fa-chevron-left rtl" ng-click='clearScreenOnFinish()' ng-if='mobile_app_service.isQuestionTypeClearScreen()'></i><div class="button-text-rtl"><%=I18n.t('questionnaire.continue_to_next_question') %></div>
+            <i class="fa fa-chevron-left rtl" ng-click='clearScreenOnFinish()'></i><div class="button-text-rtl"><%=I18n.t('questionnaire.continue_to_next_question') %></div>
           </div>
         </div>
       </div>
@@ -68,8 +67,7 @@
           <div class="option"><i class="fa fa-reply" ng-click= "onUndo()"></i><div class="button-text"><%=I18n.t('questionnaire.revise_selection') %></div></div>
           <div class="spacer"><%=I18n.t('questionnaire.or') %></div>
           <div class="option">
-            <i class="fa fa-chevron-right" ng-click='minMaxOnFinish()' ng-if='mobile_app_service.isQuestionTypeMinMax()'></i><div class="button-text"><%=I18n.t('questionnaire.continue_to_next_question') %></div>
-            <i class="fa fa-chevron-right" ng-click='clearScreenOnFinish()' ng-if='mobile_app_service.isQuestionTypeClearScreen()'></i><div class="button-text"><%=I18n.t('questionnaire.continue_to_next_question') %></div>
+            <i class="fa fa-chevron-right" ng-click='clearScreenOnFinish()'></i><div class="button-text"><%=I18n.t('questionnaire.continue_to_next_question') %></div>
           </div>
         </div>
       </div>
