change ssl cert

--- a/app/views/sa_setup/push.html.erb
+++ b/app/views/sa_setup/push.html.erb
@@ -24,7 +24,7 @@
 
   <br><br><br><br>
 
-  <a href="https://stepahead.step-ahead.com" class="sas-submit-btn sas-anchor">Proceed To System</a>
+  <a href="https://stepahead.2stepahead.com" class="sas-submit-btn sas-anchor">Proceed To System</a>
 
   <br><br>
 
