--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -16,6 +16,9 @@
       <div class="background">
         <div class="thank-you"><%= I18n.t('questionnaire.thank_you') %>, {{getEmployee(current_emp_id).name}}</div>
         <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
+        <div style="direction: rtl; border: solid orange 2px; width: 340px; height: 120px; font-size: 36px; margin: 40px auto; text-algin: center;">
+          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD/{{getParticipantId()}}">לחץ כאן למענה על מס' שאלות נוספות</a>
+        </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
     </div>
@@ -101,6 +104,9 @@
       <div class="background">
         <div class="thank-you" dir='rtl'><%= I18n.t('questionnaire.thank_you') %> {{getEmployee(current_emp_id).name}},</div>
         <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
+        <div style="direction: rtl; border: solid orange 2px; width: 340px; height: 120px; font-size: 36px; margin: 40px auto; text-algin: center;">
+          <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD/{{getParticipantId()}}">לחץ כאן למענה על מס' שאלות נוספות</a>
+        </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
     </div>
