--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -5,6 +5,7 @@
     <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' ><%= I18n.t('questionnaire.welcome_back') %>, {{getEmployee(current_emp_id).name}}</div>
     <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'><%= I18n.t('questionnaire.welcome') %>, {{getEmployee(current_emp_id).name}}</div>
     <div class="welcome-p" ><%= I18n.t('questionnaire.welcome_sentence') %></div>
+
     <div class='start-button btn-continue' ng-click="mobile_app_service.setQuestionnaireView()">
       <div class='title' ng-show='mobile_app_service.inWelcomeBackView()' ><%= I18n.t('questionnaire.resume') %></div>
       <div class='title' ng-show='mobile_app_service.inFirstEnterView()' ><%= I18n.t('questionnaire.start') %></div>
@@ -16,9 +17,9 @@
       <div class="background">
         <div class="thank-you"><%= I18n.t('questionnaire.thank_you') %>, {{getEmployee(current_emp_id).name}}</div>
         <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
-        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
+        <!-- div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
           <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD?id={{token}}">לחץ כאן למענה על מס' שאלות נוספות</a>
-        </div>
+        </div -->
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
     </div>
@@ -104,9 +105,9 @@
       <div class="background">
         <div class="thank-you" dir='rtl'><%= I18n.t('questionnaire.thank_you') %> {{getEmployee(current_emp_id).name}},</div>
         <div class="thank-you-p"><%= I18n.t('questionnaire.thank_you_note') %></div>
-        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
+        <!-- div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 30px; margin: 40px auto; text-algin: center;">
           <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;" href="https://singuser14e5e99e.fra1.qualtrics.com/jfe/form/SV_8FWy0xomcTfYfTD?id={{token}}">לחץ כאן למענה על מס' שאלות נוספות</a>
-        </div>
+        </div -->
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
     </div>
