set typeahead rtl

--- a/app/assets/stylesheets/mobile/questionnaire.scss
+++ b/app/assets/stylesheets/mobile/questionnaire.scss
@@ -82,6 +82,7 @@
             padding-left: 3px;
             /*width: 100%;*/
             list-style-type: none ;
+            direction: rtl;
             li {
               line-height: 80px;
             }
