background of search.  limit heading click

--- a/app/assets/stylesheets/mobile/questionnaire.scss
+++ b/app/assets/stylesheets/mobile/questionnaire.scss
@@ -85,6 +85,7 @@
             direction: rtl;
             li {
               line-height: 80px;
+              background-color: white;
             }
           }
           .mobile_search_img_container {
