--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -1,14 +1,17 @@
 <div ng-controller="mobileQuestionnaireController" ng-init="init()">
 
   <div ng-if="mobile_app_service.isLangRtl()" class="mobile-header"  dir='rtl'>
-    <div class="mobile-header-title" ng-click='toggleFullQuestionView()' ng-bind-html='r.question_title'></div>
+    <div class="mobile-header-title"  ng-bind-html='r.question_title'></div>
     <div class="mobile-header-page-num">{{mobile_app_service.getIndexOfCurrentQuestion()}}/{{mobile_app_service.getTotalQuestions()}}</div>
+    <div class="mobile_search_click" ng-click='toggleFullQuestionView()'>Q</div>
   </div>
 
   <div ng-if="!mobile_app_service.isLangRtl()" class="mobile-header"'>
+    <div class="mobile_search_click" ng-click='toggleFullQuestionView()'>Q</div>
     <div class="mobile-header-page-num">{{mobile_app_service.getIndexOfCurrentQuestion()}}/{{mobile_app_service.getTotalQuestions()}}</div>
-    <div class="mobile-header-title" ng-click='toggleFullQuestionView()' ng-bind-html='r.question_title'></div>
+    <div class="mobile-header-title" ng-bind-html='r.question_title'></div>
   </div>
+  
   <div class='mobile-content' id="main_container">
     <div class='question-instruction-tooltip' ng-click='toggleFullQuestionView()'>
       <div class='full-question-blocker-show' ng-class="!show_full_question && 'full-question-blocker-hide'"></div>
